# LDTPmodule

./: .gitignore  CLAUDE.md  README.md  build.py  config.ini  config_manager.py  ldtp_app.db  main.py  pyproject.toml  pyrightconfig.json  refactoringplan.md  requirements.txt  test_database.py  test_imports.py  test_services.py  test_widgets.py  testplan.md
app/: __init__.py  dialogs.py  event_handlers.py  main_ui.py  routes.py  ui_builder.py
app/event_handlers/: __init__.py  data_operations.py  form_operations.py  template_operations.py  treatment_plan_operations.py  ui_events.py
database/: __init__.py  connection.py  initializer.py
database/repositories/: patient_repo.py  template_repo.py
docs/: CHANGELOG.md  README.md
models/: __init__.py  base.py  main_disease.py  patient.py  patient_info.py  sheet_name.py  template.py
scripts/: project_structure.py  project_structure.txt
services/: __init__.py  barcode_service.py  csv_service.py  data_export_service.py  file_monitor_service.py  patient_service.py  template_service.py  treatment_plan.py  treatment_plan_service.py  version_manager.py
template/: LDTPform.xlsm
tests/: conftest.py  test_refactoring_step1.py
tests/database/: __init__.py  test_connection.py
tests/integration/: README.md  test_database_operations.py  test_ui_flow.py
tests/models/: test_main_disease.py  test_patient_info.py  test_sheet_name.py
ui/views/: main_view.py  (+2 more)
utils/: __init__.py  config.ini  config.py  config_manager.py  date_utils.py  file_utils.py
widgets/: __init__.py  button_styles.py  dropdown_items.py  form_fields.py
(+11 files in other folders)
