[project]
name = "ldtpmodule"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "flet==0.23.0",        # UIフレームワーク
    "fastapi==0.115.11",   # Web APIフレームワーク
    "uvicorn==0.34.0",     # ASGIサーバー
    "sqlalchemy==2.0.39",  # ORM/データベース操作
    "mysqlclient==2.2.7",  # MySQL接続ドライバ
    "pandas==2.0.3",       # データ解析
    "numpy==1.24.4",
    "openpyxl==3.1.5",     # Excelファイル操作
    "pydantic==2.10.6",    # データバリデーション
    "python-dotenv==1.0.1",# 環境変数管理
    "requests==2.32.3",    # HTTPクライアント
    "qrcode==7.4.2",       # QRコード生成
    "pywin32==310",
    "python-barcode>=0.15.1" # バーコード生成
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "pyinstaller>=6.14.2",
    "pyright>=1.1.409",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"
include = ["app", "services", "utils", "widgets", "tests"]
exclude = ["scripts"]
reportMissingTypeStubs = false
reportUnusedVariable = true
reportUnusedImport = true